whitespace and line length errors resolved

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400&family=Roboto&display=swap');
 
-
 *{
     padding: 0;
     margin: 0;
@@ -10,6 +9,7 @@
 
 html {
     height: 100vh;
+    width: 100%;
 }
 
 body {
@@ -19,6 +19,7 @@ body {
     padding: 0;
 }
 
+/* header */
 .nav-extended .nav-wrapper a {
   font-family: 'Prompt', sans-serif;
 }
@@ -30,7 +31,6 @@ body {
 .nav-extended .nav-wrapper .brand-logo {
   margin-left: 2%;
 }
-
 
 .nav-wrapper {
   background-color: rgb(40,184,115);
@@ -52,59 +52,21 @@ a .brand-logo {
 p {
   font-family: 'Roboto', sans-serif;
 }
-/* main {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    padding: 0;
-} */
 
+/* flashes */
 .flashes h4 {
     line-height: 2;
 }
 
-
-.business-details {
-    padding: 0;
+/* offers page/ home page */
+.search-button button {
+  height: 100%;
+  padding: 0 4%;
 }
 
-.business-details h3 {
-  text-decoration: underline;
+.search-button button i {
+  margin: 0 auto;
 }
-
-blockquote {
-  border-left: 7px solid rgb(40,184,115);
-}
-
-/* star widget codingnepalweb */
-
-.star-widget label{
-    font-size: 250%;
-    color: #444;
-    padding: 10px;
-    transition: all 0.2s ease;
-    float: right;
-  }
-
-input:not(:checked) ~ label:hover,
-input:not(:checked) ~ label:hover ~ label{
-  color: #fd4;
-}
-
-input:checked ~ label{
-    color: #fd4;
-  }
-
-input#rate-5:checked ~ label{
-    color: #fe7;
-  }
-
-  /* .offers-container .grid {
-    grid-template-columns: 100px 50px 100px;
-    grid-template-rows: 80px auto 80px; 
-    column-gap: 10px;
-    row-gap: 15px;
-  } */
 
 .offer-container {
   border: 1px solid black;
@@ -129,34 +91,17 @@ input#rate-5:checked ~ label{
   object-fit: cover;
 }
 
-.my-offer-container {
-  border: 1px solid black;
-  height: 40vh;
-  margin-top: 1%;
-  }
-
-.my-offer-window {
-  padding-top: 4%;
-  padding-bottom: 4%;
-  padding-left: 0;
-  padding-right: 0;
-  min-width: 80%;
-  height: 70%;
+/* business profile */
+.business-details {
+    padding: 0;
 }
 
-.my-offer-window img {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  object-fit: cover;
-}
-
-.cross-out {
-  text-decoration: line-through;
-}
-
-.underline :hover {
+.business-details h3 {
   text-decoration: underline;
+}
+
+blockquote {
+  border-left: 7px solid rgb(40,184,115);
 }
 
 .logo-container {
@@ -169,10 +114,6 @@ input#rate-5:checked ~ label{
   width: 100%;
   overflow: hidden;
   object-fit: cover;
-}
-
-.underline {
-  text-decoration: underline;
 }
 
 .social-media i {
@@ -203,6 +144,74 @@ div .col .social-media-container {
   font-size: 120%;
 }
 
+/* offer profile */
+
+.price {
+  height: 17vh;
+}
+
+.offer_description {
+  min-height: 17vh;
+}
+
+/* star widget codingnepalweb */
+.star-widget label{
+    font-size: 250%;
+    color: #444;
+    padding: 10px;
+    transition: all 0.2s ease;
+    float: right;
+  }
+
+input:not(:checked) ~ label:hover,
+input:not(:checked) ~ label:hover ~ label{
+  color: #fd4;
+}
+
+input:checked ~ label{
+    color: #fd4;
+  }
+
+input#rate-5:checked ~ label{
+    color: #fe7;
+  }
+
+/* my offers */
+.my-offer-container {
+  border: 1px solid black;
+  height: 40vh;
+  margin-top: 1%;
+  }
+
+.my-offer-window {
+  padding-top: 4%;
+  padding-bottom: 4%;
+  padding-left: 0;
+  padding-right: 0;
+  min-width: 80%;
+  height: 70%;
+}
+
+.my-offer-window img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+.cross-out {
+  text-decoration: line-through;
+}
+
+.underline :hover {
+  text-decoration: underline;
+}
+
+
+.underline {
+  text-decoration: underline;
+}
+
 .offer_img_container {
   padding-top: 4%;
   padding-bottom: 4%;
@@ -219,25 +228,8 @@ div .col .social-media-container {
   object-fit: cover;
 }
 
-.search-button button {
-  height: 100%;
-  padding: 0 4%;
-  
-}
 
-.search-button button i {
-  margin: 0 auto;
-  
-}
-
+/* sign up */
 input[type="file"] {
   display: none;
-}
-
-.price {
-  height: 17vh;
-}
-
-.offer_description {
-  min-height: 17vh;
 }
